--- a/ameaca.html
+++ b/ameaca.html
@@ -8,22 +8,22 @@
 <meta charset="utf-8" />
 <title>A Ameaça Neofascista &mdash; Bolsonaro.com.br</title>
 <link rel="shortcut icon" type="image/x-icon" href="https://images.squarespace-cdn.com/content/v1/614e64ac44f08f51acc475a5/eb6896d1-035c-451e-836e-74e647c580ed/favicon.ico?format=100w"/>
-<link rel="canonical" href="https://thefatknox.github.io/bolsonaro/ameaca/index.html/index.html"/>
+<link rel="canonical" href="https://thefatknox.github.io/bolsonaro/ameaca/index.html"/>
 <meta property="og:site_name" content="Bolsonaro.com.br"/>
 <meta property="og:title" content="A Ameaça Neofascista &mdash; Bolsonaro.com.br"/>
-<meta property="og:url" content="https://thefatknox.github.io/bolsonaro/ameaca/index.html/index.html"/>
+<meta property="og:url" content="https://thefatknox.github.io/bolsonaro/ameaca/index.html"/>
 <meta property="og:type" content="website"/>
 <meta property="og:image" content="http://static1.squarespace.com/static/614e64ac44f08f51acc475a5/t/630e44570b8bdc276f675720/1661879386697/cercadinho+seo+crop.jpg?format=1500w"/>
 <meta property="og:image:width" content="575"/>
 <meta property="og:image:height" content="321"/>
 <meta itemprop="name" content="A Ameaça Neofascista — Bolsonaro.com.br"/>
-<meta itemprop="url" content="https://thefatknox.github.io/bolsonaro/ameaca/index.html/index.html"/>
+<meta itemprop="url" content="https://thefatknox.github.io/bolsonaro/ameaca/index.html"/>
 <meta itemprop="thumbnailUrl" content="http://static1.squarespace.com/static/614e64ac44f08f51acc475a5/t/630e44570b8bdc276f675720/1661879386697/cercadinho+seo+crop.jpg?format=1500w"/>
 <link rel="image_src" href="http://static1.squarespace.com/static/614e64ac44f08f51acc475a5/t/630e44570b8bdc276f675720/1661879386697/cercadinho+seo+crop.jpg?format=1500w" />
 <meta itemprop="image" content="http://static1.squarespace.com/static/614e64ac44f08f51acc475a5/t/630e44570b8bdc276f675720/1661879386697/cercadinho+seo+crop.jpg?format=1500w"/>
 <meta name="twitter:title" content="A Ameaça Neofascista — Bolsonaro.com.br"/>
 <meta name="twitter:image" content="http://static1.squarespace.com/static/614e64ac44f08f51acc475a5/t/630e44570b8bdc276f675720/1661879386697/cercadinho+seo+crop.jpg?format=1500w"/>
-<meta name="twitter:url" content="https://thefatknox.github.io/bolsonaro/ameaca/index.html/index.html"/>
+<meta name="twitter:url" content="https://thefatknox.github.io/bolsonaro/ameaca/index.html"/>
 <meta name="twitter:card" content="summary"/>
 <meta name="description" content="" />
 <link rel="preconnect" href="https://images.squarespace-cdn.com">
