--- a/acervo/bolsonaro-afirma-que-sua-especialidade-matar.html
+++ b/acervo/bolsonaro-afirma-que-sua-especialidade-matar.html
@@ -1631,7 +1631,7 @@ Contato
   data-controller="ItemPagination"
 >
   
-    <a href="../acervo/mensagem-de-bolsonaro-para-os-enfermeiros" class="item-pagination-link item-pagination-link--prev">
+    <a href="../acervo/mensagem-de-bolsonaro-para-os-enfermeiros.html" class="item-pagination-link item-pagination-link--prev">
       <div class="item-pagination-icon icon icon--stroke">
         <svg class="caret-left-icon--small" viewBox="0 0 9 16">
           <polyline fill="none" stroke-miterlimit="10" points="7.3,14.7 2.5,8 7.3,1.2"/>
@@ -1647,7 +1647,7 @@ Contato
     </a>
   
   
-    <a href="../acervo/bolsonaro-eleito-a-pessoa-do-ano-em-crime-organizado-e-corrupo" class="item-pagination-link item-pagination-link--next">
+    <a href="../acervo/bolsonaro-eleito-a-pessoa-do-ano-em-crime-organizado-e-corrupo.html" class="item-pagination-link item-pagination-link--next">
       <div class="pagination-title-wrapper">
         
         <div class="visually-hidden">Próximo</div>
