--- a/acervo/bolsonaro-eleito-a-pessoa-do-ano-em-crime-organizado-e-corrupo.html
+++ b/acervo/bolsonaro-eleito-a-pessoa-do-ano-em-crime-organizado-e-corrupo.html
@@ -1719,7 +1719,7 @@ seu papel em promover o crime organizado e corrupção." />
   data-controller="ItemPagination"
 >
   
-    <a href="bolsonaro-afirma-que-sua-especialidade-matar" class="item-pagination-link item-pagination-link--prev">
+    <a href="bolsonaro-afirma-que-sua-especialidade-matar.html" class="item-pagination-link item-pagination-link--prev">
       <div class="item-pagination-icon icon icon--stroke">
         <svg class="caret-left-icon--small" viewBox="0 0 9 16">
           <polyline fill="none" stroke-miterlimit="10" points="7.3,14.7 2.5,8 7.3,1.2"/>
@@ -1735,7 +1735,7 @@ seu papel em promover o crime organizado e corrupção." />
     </a>
   
   
-    <a href="../acervo/polcia-federal-identifica-carlos-bolsonaro-como-articulador-em-esquema-criminoso" class="item-pagination-link item-pagination-link--next">
+    <a href="../acervo/polcia-federal-identifica-carlos-bolsonaro-como-articulador-em-esquema-criminoso.html" class="item-pagination-link item-pagination-link--next">
       <div class="pagination-title-wrapper">
         
         <div class="visually-hidden">Próximo</div>
