--- a/acervo/presidente-bolsonaro-acumula-acusaes-de-crimes-gravssimos-em-tribunal-internacional.html
+++ b/acervo/presidente-bolsonaro-acumula-acusaes-de-crimes-gravssimos-em-tribunal-internacional.html
@@ -1628,7 +1628,7 @@ Contato
   data-controller="ItemPagination"
 >
   
-    <a href="../acervo/polcia-federal-identifica-carlos-bolsonaro-como-articulador-em-esquema-criminoso" class="item-pagination-link item-pagination-link--prev">
+    <a href="../acervo/polcia-federal-identifica-carlos-bolsonaro-como-articulador-em-esquema-criminoso.html" class="item-pagination-link item-pagination-link--prev">
       <div class="item-pagination-icon icon icon--stroke">
         <svg class="caret-left-icon--small" viewBox="0 0 9 16">
           <polyline fill="none" stroke-miterlimit="10" points="7.3,14.7 2.5,8 7.3,1.2"/>
