--- a/acervo/alexandre-frota-diz-que-eduardo-bolsonaro-assistiu-muitos-de-seus-filmes.html
+++ b/acervo/alexandre-frota-diz-que-eduardo-bolsonaro-assistiu-muitos-de-seus-filmes.html
@@ -1628,7 +1628,7 @@
   data-controller="ItemPagination"
 >
   
-    <a href="coronel-revela-que-bolsonaro-sempre-teve-a-inteno-de-liderar-rebelies-no-exrcito" class="item-pagination-link item-pagination-link--prev">
+    <a href="coronel-revela-que-bolsonaro-sempre-teve-a-inteno-de-liderar-rebelies-no-exrcito.html" class="item-pagination-link item-pagination-link--prev">
       <div class="item-pagination-icon icon icon--stroke">
         <svg class="caret-left-icon--small" viewBox="0 0 9 16">
           <polyline fill="none" stroke-miterlimit="10" points="7.3,14.7 2.5,8 7.3,1.2"/>
@@ -1644,7 +1644,7 @@
     </a>
   
   
-    <a href="bolsonaro-no-v-problema-com-nepotismo-na-poltica" class="item-pagination-link item-pagination-link--next">
+    <a href="bolsonaro-no-v-problema-com-nepotismo-na-poltica.html" class="item-pagination-link item-pagination-link--next">
       <div class="pagination-title-wrapper">
         
         <div class="visually-hidden">Próximo</div>
