--- a/acervo/bolsonaro-a-tortura-e-morte.html
+++ b/acervo/bolsonaro-a-tortura-e-morte.html
@@ -1628,7 +1628,7 @@ Contato
   data-controller="ItemPagination"
 >
   
-    <a href="../acervo/rachadinha-uma-prtica-meio-comum" class="item-pagination-link item-pagination-link--prev">
+    <a href="../acervo/rachadinha-uma-prtica-meio-comum.html" class="item-pagination-link item-pagination-link--prev">
       <div class="item-pagination-icon icon icon--stroke">
         <svg class="caret-left-icon--small" viewBox="0 0 9 16">
           <polyline fill="none" stroke-miterlimit="10" points="7.3,14.7 2.5,8 7.3,1.2"/>
@@ -1644,7 +1644,7 @@ Contato
     </a>
   
   
-    <a href="../acervo/e04u1eewas2ids47oouezvnxprw6ry" class="item-pagination-link item-pagination-link--next">
+    <a href="../acervo/e04u1eewas2ids47oouezvnxprw6ry.html" class="item-pagination-link item-pagination-link--next">
       <div class="pagination-title-wrapper">
         
         <div class="visually-hidden">Próximo</div>
