--- a/acervo/bolsonaro-defende-guerra-civil-diz-que-sonega-impostos-e-que-votaria-em-lula.html
+++ b/acervo/bolsonaro-defende-guerra-civil-diz-que-sonega-impostos-e-que-votaria-em-lula.html
@@ -1628,7 +1628,7 @@
   data-controller="ItemPagination"
 >
   
-    <a href="jair-bolsonaro-afirma-sou-homofbico-sim" class="item-pagination-link item-pagination-link--prev">
+    <a href="jair-bolsonaro-afirma-sou-homofbico-sim.html" class="item-pagination-link item-pagination-link--prev">
       <div class="item-pagination-icon icon icon--stroke">
         <svg class="caret-left-icon--small" viewBox="0 0 9 16">
           <polyline fill="none" stroke-miterlimit="10" points="7.3,14.7 2.5,8 7.3,1.2"/>
@@ -1644,7 +1644,7 @@
     </a>
   
   
-    <a href="../acervo/rachadinha-uma-prtica-meio-comum" class="item-pagination-link item-pagination-link--next">
+    <a href="../acervo/rachadinha-uma-prtica-meio-comum.html" class="item-pagination-link item-pagination-link--next">
       <div class="pagination-title-wrapper">
         
         <div class="visually-hidden">Próximo</div>
