--- a/acervo/bolsonaro-no-v-problema-com-nepotismo-na-poltica.html
+++ b/acervo/bolsonaro-no-v-problema-com-nepotismo-na-poltica.html
@@ -1628,7 +1628,7 @@ Contato
   data-controller="ItemPagination"
 >
   
-    <a href="../acervo/alexandre-frota-diz-que-eduardo-bolsonaro-assistiu-muitos-de-seus-filmes" class="item-pagination-link item-pagination-link--prev">
+    <a href="../acervo/alexandre-frota-diz-que-eduardo-bolsonaro-assistiu-muitos-de-seus-filmes.html" class="item-pagination-link item-pagination-link--prev">
       <div class="item-pagination-icon icon icon--stroke">
         <svg class="caret-left-icon--small" viewBox="0 0 9 16">
           <polyline fill="none" stroke-miterlimit="10" points="7.3,14.7 2.5,8 7.3,1.2"/>
@@ -1644,7 +1644,7 @@ Contato
     </a>
   
   
-    <a href="jair-bolsonaro-afirma-sou-homofbico-sim" class="item-pagination-link item-pagination-link--next">
+    <a href="jair-bolsonaro-afirma-sou-homofbico-sim.html" class="item-pagination-link item-pagination-link--next">
       <div class="pagination-title-wrapper">
         
         <div class="visually-hidden">Próximo</div>
