--- a/acervo/coronel-revela-que-bolsonaro-sempre-teve-a-inteno-de-liderar-rebelies-no-exrcito.html
+++ b/acervo/coronel-revela-que-bolsonaro-sempre-teve-a-inteno-de-liderar-rebelies-no-exrcito.html
@@ -1720,7 +1720,7 @@ Contato
   
   
   
-    <a href="../acervo/alexandre-frota-diz-que-eduardo-bolsonaro-assistiu-muitos-de-seus-filmes" class="item-pagination-link item-pagination-link--next">
+    <a href="../acervo/alexandre-frota-diz-que-eduardo-bolsonaro-assistiu-muitos-de-seus-filmes.html" class="item-pagination-link item-pagination-link--next">
       <div class="pagination-title-wrapper">
         
         <div class="visually-hidden">Próximo</div>
