--- a/acervo/e04u1eewas2ids47oouezvnxprw6ry.html
+++ b/acervo/e04u1eewas2ids47oouezvnxprw6ry.html
@@ -1718,7 +1718,7 @@
   data-controller="ItemPagination"
 >
   
-    <a href="bolsonaro-a-tortura-e-morte" class="item-pagination-link item-pagination-link--prev">
+    <a href="bolsonaro-a-tortura-e-morte.html" class="item-pagination-link item-pagination-link--prev">
       <div class="item-pagination-icon icon icon--stroke">
         <svg class="caret-left-icon--small" viewBox="0 0 9 16">
           <polyline fill="none" stroke-miterlimit="10" points="7.3,14.7 2.5,8 7.3,1.2"/>
@@ -1734,7 +1734,7 @@
     </a>
   
   
-    <a href="mensagem-de-bolsonaro-para-os-enfermeiros" class="item-pagination-link item-pagination-link--next">
+    <a href="mensagem-de-bolsonaro-para-os-enfermeiros.html" class="item-pagination-link item-pagination-link--next">
       <div class="pagination-title-wrapper">
         
         <div class="visually-hidden">Próximo</div>
