--- a/acervo/jair-bolsonaro-afirma-sou-homofbico-sim.html
+++ b/acervo/jair-bolsonaro-afirma-sou-homofbico-sim.html
@@ -1628,7 +1628,7 @@ Contato
   data-controller="ItemPagination"
 >
   
-    <a href="bolsonaro-no-v-problema-com-nepotismo-na-poltica" class="item-pagination-link item-pagination-link--prev">
+    <a href="bolsonaro-no-v-problema-com-nepotismo-na-poltica.html" class="item-pagination-link item-pagination-link--prev">
       <div class="item-pagination-icon icon icon--stroke">
         <svg class="caret-left-icon--small" viewBox="0 0 9 16">
           <polyline fill="none" stroke-miterlimit="10" points="7.3,14.7 2.5,8 7.3,1.2"/>
@@ -1644,7 +1644,7 @@ Contato
     </a>
   
   
-    <a href="../acervo/bolsonaro-defende-guerra-civil-diz-que-sonega-impostos-e-que-votaria-em-lula" class="item-pagination-link item-pagination-link--next">
+    <a href="../acervo/bolsonaro-defende-guerra-civil-diz-que-sonega-impostos-e-que-votaria-em-lula.html" class="item-pagination-link item-pagination-link--next">
       <div class="pagination-title-wrapper">
         
         <div class="visually-hidden">Próximo</div>
