--- a/acervo/mensagem-de-bolsonaro-para-os-enfermeiros.html
+++ b/acervo/mensagem-de-bolsonaro-para-os-enfermeiros.html
@@ -1631,7 +1631,7 @@
   data-controller="ItemPagination"
 >
   
-    <a href="e04u1eewas2ids47oouezvnxprw6ry" class="item-pagination-link item-pagination-link--prev">
+    <a href="e04u1eewas2ids47oouezvnxprw6ry.html" class="item-pagination-link item-pagination-link--prev">
       <div class="item-pagination-icon icon icon--stroke">
         <svg class="caret-left-icon--small" viewBox="0 0 9 16">
           <polyline fill="none" stroke-miterlimit="10" points="7.3,14.7 2.5,8 7.3,1.2"/>
@@ -1647,7 +1647,7 @@
     </a>
   
   
-    <a href="bolsonaro-afirma-que-sua-especialidade-matar" class="item-pagination-link item-pagination-link--next">
+    <a href="bolsonaro-afirma-que-sua-especialidade-matar.html" class="item-pagination-link item-pagination-link--next">
       <div class="pagination-title-wrapper">
         
         <div class="visually-hidden">Próximo</div>
