--- a/acervo/polcia-federal-identifica-carlos-bolsonaro-como-articulador-em-esquema-criminoso.html
+++ b/acervo/polcia-federal-identifica-carlos-bolsonaro-como-articulador-em-esquema-criminoso.html
@@ -1720,7 +1720,7 @@ criminoso" />
   data-controller="ItemPagination"
 >
   
-    <a href="../acervo/bolsonaro-eleito-a-pessoa-do-ano-em-crime-organizado-e-corrupo" class="item-pagination-link item-pagination-link--prev">
+    <a href="../acervo/bolsonaro-eleito-a-pessoa-do-ano-em-crime-organizado-e-corrupo.html" class="item-pagination-link item-pagination-link--prev">
       <div class="item-pagination-icon icon icon--stroke">
         <svg class="caret-left-icon--small" viewBox="0 0 9 16">
           <polyline fill="none" stroke-miterlimit="10" points="7.3,14.7 2.5,8 7.3,1.2"/>
@@ -1736,7 +1736,7 @@ criminoso" />
     </a>
   
   
-    <a href="../acervo/presidente-bolsonaro-acumula-acusaes-de-crimes-gravssimos-em-tribunal-internacional" class="item-pagination-link item-pagination-link--next">
+    <a href="../acervo/presidente-bolsonaro-acumula-acusaes-de-crimes-gravssimos-em-tribunal-internacional.html" class="item-pagination-link item-pagination-link--next">
       <div class="pagination-title-wrapper">
         
         <div class="visually-hidden">Próximo</div>
