--- a/a-ameaca/index.html
+++ b/a-ameaca/index.html
@@ -16,14 +16,14 @@
 <meta property="og:url" content="https://metatags.io/">
 <meta property="og:title" content="Bolsonaro: Uma ameaça ao Brasil">
 <meta property="og:description" content="Este site é uma galeria de arte digital e acervo jornalístico relacionado à família Bolsonaro.">
-<meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+<meta property="og:image" content="https://images.squarespace-cdn.com/content/v1/614e64ac44f08f51acc475a5/9a111d9f-ff91-4d52-8666-8e79c5ed8c56/jail+1+med.jpg?format=1000w">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://metatags.io/">
 <meta property="twitter:title" content="Bolsonaro: Uma ameaça ao Brasil">
 <meta property="twitter:description" content="Este site é uma galeria de arte digital e acervo jornalístico relacionado à família Bolsonaro.">
-<meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+<meta property="twitter:image" content="https://images.squarespace-cdn.com/content/v1/614e64ac44f08f51acc475a5/9a111d9f-ff91-4d52-8666-8e79c5ed8c56/jail+1+med.jpg?format=1000w">
 <link rel="preconnect" href="https://images.squarespace-cdn.com">
 <script type="text/javascript" src="https://use.typekit.net/ik/lrP0vhapr4pZwcwj6E6xjJQYqPd-dlfT1Pv-829SD6jfeTGIfFHN4UJLFRbh52jhWDjUFe9hFeBRF2scw2ycFQByjhwXFDmyFs7iMkG0jAFu-WsoShFGZAsude80ZkoRdhXCHKoyjamTiY8Djhy8ZYmC-Ao1Oco8if37OcBDOcu8OfG0dcN0jAizdKuXScNljcN0ZPXuFW41O1FUiABkZWF3jAF8OcFzdP37O1FUiABkZWF3jAF8ShFGZAsude80ZkoRdhXCjAFu-WsoShFGZAsude80ZkoRdhXCjAFu-WsoShFGZAsude80Zko0ZWbCjWw0dA9CjcNCShN0jW4zOcFzdPoKSKUCdhFydeyzSabCdcN0jAizdKuXScNljcN0ZPXuFW41O1FUiABkZWF3jAF8OcFzdPUDSWmyScmDSeBRZWFR-emqiAUTdcS0jhNlOYiaikoyjamTiY8Djhy8ZYmC-Ao1OcFzdPUaiaS0jAFu-WsoShFGZAsude80Zko0ZWbCiaiaOcBDOcu8OYiaikoKdhUDdhoyScv0jhNlOc4kOYiaiko0dhoyZhN0OWskdhuKdho8OQ9uScS0SaBujW48Sagyjh90jhNlOYiaikoDSWmyScmDSeBRZWFR-emqiAUTdcS0jhNlJ6TnZWgCZWJlSasqH6qJq9XbMg62JMJ7fbKFQsMMeMb6MKG4f44FIMMjgPMfH6qJRXXbMg6YJMJ7fbKJSyMMeMX6MKG4f4gFIMMjIPMfqMeUcrfWg6.js"></script>
 <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
